--- a/estructura de archivos/src/views/users/login.ejs
+++ b/estructura de archivos/src/views/users/login.ejs
@@ -10,7 +10,7 @@
                 <div class="body__form--title">
                     <h2>Iniciar sesión</h2>
                 </div>
-                <form action="" method="POST">
+                <form action="/users/login" method="POST">
                     <div class="body__form--inputs">
                         <div class="body__form__inputs--userData">
                             <div class="body__form__inputs__userData--input">
