--- a/estructura de archivos/src/views/index.ejs
+++ b/estructura de archivos/src/views/index.ejs
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- H E A D -->
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>DALF-Store</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link href="/css/styles.css" rel="stylesheet" />
-    <link href="/css/index.css" rel="stylesheet" />
-    <link href="/css/header.css" rel="stylesheet">
-    <link href="/css/footer.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/css/glider.css">
-</head>
+<%- include('./partials/head',{ title:'home', }) %>
 <!-- / H E A D -->
 <body id="index">
     <!-- H E A D E R -->
@@ -142,10 +132,6 @@
     <%- include('./partials/footer',{ title:'home', }) %>
     <!-- / F O O T E R -->
     <!-- SCRIPTS -->
-    <script src="https://kit.fontawesome.com/ae7c764a16.js " crossorigin="anonymous "></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js " integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk " crossorigin="anonymous "></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js " integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK " crossorigin="anonymous "></script>
-    <script src="/js/glider.js"></script>
     <script>
         const myCarouselElement = document.querySelector('#carouselExampleIndicators #carouselExampleControls')
         const carousel = new bootstrap.Carousel(myCarouselElement, {
