--- a/estructura de archivos/src/views/partials/footer.ejs
+++ b/estructura de archivos/src/views/partials/footer.ejs
@@ -1,8 +1,8 @@
 <footer class="footer__content">
-    <div class="footer--logo">
+    <section class="footer--logo">
         <a href="/index"><img src="/images/logo2.png" alt="Logo"></a>
-    </div>
-    <div class="footer_nav">
+    </section>
+    <section class="footer_nav">
         <nav class="footer_nav-home">
             <p>Titulos</p>
             <ul type="none">
@@ -36,21 +36,64 @@
         </nav>
         <div class="footer_nav-app">
             <p>Descarga nuestra app</p>
-            <a href=""><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.a7hkwxpVOiMzChf87GmGdwHaCM%26pid%3DApi&f=1" alt=""></a>
-            <a href=""><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.dnPVcNejErfwIJacdXV27wHaCj%26pid%3DApi&f=1" alt=""></a>
+            <a href=""><img
+                    src="/images/google-play.png"
+                    alt=""></a>
+            <a href=""><img
+                    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.dnPVcNejErfwIJacdXV27wHaCj%26pid%3DApi&f=1"
+                    alt=""></a>
         </div>
-    </div>
+    </section>
+    <section class="payment-method-section">
+        <p class="payment-method-title">Metodos de pago</p>
+        <div class="payment-method">
+            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/visa@2x.png"
+                class="method-payment-logo" alt="visa">
+            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/mastercard@2x.png"
+                class="method-payment-logo" alt="mastercard">
+            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/amex@2x.png"
+                class="method-payment-logo" alt="amex">
+            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/ar/banelco@2x.png"
+                class="method-payment-logo" alt="banelco">
+            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/mercadopago@2x.png"
+                class="method-payment-logo" alt="mercadopago">
+            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/pagofacil@2x.png"
+                class="method-payment-logo" alt="pagofacil">
+            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/rapipago@2x.png"
+                class="method-payment-logo" alt="rapipago">
+            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/nativa@2x.png"
+                class="method-payment-logo" alt="nativa">
+            <img src="//d26lpennugtm8s.cloudfront.net/assets/common/img/logos/payment/new_logos_payment/ar/tarjeta-naranja@2x.png"
+                class="method-payment-logo" alt="tarjeta-naranja">
+        </div>
+    </section>
+
     <section class="footer__lastsection">
+        <p>Visita nuestras redes sociales</p>
         <nav class="footer__lastsection__navbar">
-            <a href=""><figure><i class="fa-brands fa-facebook-f"></i></figure></a>
-            <a href=""><figure><i class="fa-brands fa-twitter"></i></figure></a>
-            <a href=""><figure><i class="fa-brands fa-google-plus-g"></i></figure></a>
-            <a href=""><figure><i class="fa-brands fa-instagram"></i></figure></a>
-            <a href=""><figure><i class="fa-brands fa-discord"></i></figure></a>
+            <a href="">
+                <figure><i class="fa-brands fa-facebook-f"></i></figure>
+            </a>
+            <a href="">
+                <figure><i class="fa-brands fa-twitter"></i></figure>
+            </a>
+            <a href="">
+                <figure><i class="fa-brands fa-linkedin-in"></i></figure>
+            </a>
+            <a href="">
+                <figure><i class="fa-brands fa-instagram"></i></figure>
+            </a>
+            <a href="">
+                <figure><i class="fa-brands fa-discord"></i></figure>
+            </a>
         </nav>
         <p class="footer__lastsection__copyright">Copyright © 2022 DALF-STORE</p>
     </section>
 </footer>
 <script src="https://kit.fontawesome.com/ae7c764a16.js " crossorigin="anonymous "></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js " integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk " crossorigin="anonymous "></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js " integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK " crossorigin="anonymous "></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js "
+    integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk "
+    crossorigin="anonymous "></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js "
+    integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK "
+    crossorigin="anonymous "></script>
