--- a/estructura de archivos/src/views/products/productDetail.ejs
+++ b/estructura de archivos/src/views/products/productDetail.ejs
@@ -45,22 +45,24 @@
                         </article>
                     </section>
                 </section>
-                <section class="detail__product__features">
-                    <h3>Caracteristicas</h3>
-                    <ul>
-                        <li>Lorem ipsum dolor sit amet consectetur quia!</li>
-                        <li>Lorem ipsum dolor sit amet consectetur quia!</li>
-                        <li>Lorem ipsum dolor sit amet consectetur quia!</li>
-                        <li>Lorem ipsum dolor sit amet consectetur quia!</li>
-                        <li>Lorem ipsum dolor sit amet consectetur quia!</li>
-                        <li>Lorem ipsum dolor sit amet consectetur quia!</li>
-                        <li>Lorem ipsum dolor sit amet consectetur quia!</li>
-                    </ul>
-                </section>
-                <section class="detail__product__store">
-                    <h3>Descripción</h3>
-                    <p> <%= product.description %> </p>
-                </section>
+                <div class="product_and_features">
+                    <section class="detail__product__features">
+                        <h3>Caracteristicas</h3>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur quia!</li>
+                            <li>Lorem ipsum dolor sit amet consectetur quia!</li>
+                            <li>Lorem ipsum dolor sit amet consectetur quia!</li>
+                            <li>Lorem ipsum dolor sit amet consectetur quia!</li>
+                            <li>Lorem ipsum dolor sit amet consectetur quia!</li>
+                            <li>Lorem ipsum dolor sit amet consectetur quia!</li>
+                            <li>Lorem ipsum dolor sit amet consectetur quia!</li>
+                        </ul>
+                    </section>
+                    <section class="detail__product__store">
+                        <h3>Descripción</h3>
+                        <p> <%= product.description %> </p>
+                    </section>
+                </div>
                 <section class="detail__product__ratings">
                     <h3>Calificaciones</h3>
                     <article>
