trabajando en medios de pago

--- a/estructura de archivos/src/views/partials/footer.ejs
+++ b/estructura de archivos/src/views/partials/footer.ejs
@@ -40,7 +40,7 @@
                     src="/images/google-play.png"
                     alt=""></a>
             <a href=""><img
-                    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.dnPVcNejErfwIJacdXV27wHaCj%26pid%3DApi&f=1"
+                    src="/images/app-store.png"
                     alt=""></a>
         </div>
     </section>
