--- a/estructura de archivos/src/views/users/profile.ejs
+++ b/estructura de archivos/src/views/users/profile.ejs
@@ -22,6 +22,22 @@
                                 <label for="userName">Nombre de usuario:</label>
                                 <input type="text" placeholder="Nombre de usuario" id="userName" name="userName" value="<%= user.userName %>">
                             </div>
+
+                            <div class="body__form__inputs__userData--input">
+                                <label for="firstName">Nombre:</label>
+                                <input type="text" placeholder="Nombre de usuario" id="firstName" name="firstName" value="<%= user.firstName %>">
+                            </div>
+
+                            <div class="body__form__inputs__userData--input">
+                                <label for="lastName">Apellido:</label>
+                                <input type="text" placeholder="Nombre de usuario" id="lastName" name="lastName" value="<%= user.lastName %>">
+                            </div>
+
+                            <div class="body__form__inputs__userData--input">
+                                <label for="bday">Cumpleaños:</label>
+                                <input type="date" placeholder="Nombre de usuario" id="bday" name="bday" value="<%= user.bday %>">
+                            </div>
+
                             <div class="body__form__inputs__userData__input--avatar">
                                 <button class="body__form__inputs__userData__input__avatar--btn">Elegir Avatar</button>
                                 <input type="file" id="avatar" name="avatar">
