--- a/estructura de archivos/src/views/users/profile.ejs
+++ b/estructura de archivos/src/views/users/profile.ejs
@@ -25,17 +25,17 @@
 
                             <div class="body__form__inputs__userData--input">
                                 <label for="firstName">Nombre:</label>
-                                <input type="text" placeholder="Nombre de usuario" id="firstName" name="firstName" value="<%= user.firstName %>">
+                                <input type="text" placeholder="Nombre" id="firstName" name="firstName" value="<%= user.firstName %>">
                             </div>
 
                             <div class="body__form__inputs__userData--input">
                                 <label for="lastName">Apellido:</label>
-                                <input type="text" placeholder="Nombre de usuario" id="lastName" name="lastName" value="<%= user.lastName %>">
+                                <input type="text" placeholder="Apellido" id="lastName" name="lastName" value="<%= user.lastName %>">
                             </div>
 
                             <div class="body__form__inputs__userData--input">
                                 <label for="bday">Cumpleaños:</label>
-                                <input type="date" placeholder="Nombre de usuario" id="bday" name="bday" value="<%= user.bday %>">
+                                <input type="date" id="bday" name="bday" value="<%= user.bday %>">
                             </div>
 
                             <div class="body__form__inputs__userData__input--avatar">
