--- a/estructura de archivos/src/views/users/profile.ejs
+++ b/estructura de archivos/src/views/users/profile.ejs
@@ -25,23 +25,34 @@
 
                             <div class="body__form__inputs__userData--input">
                                 <label for="firstName">Nombre:</label>
-                                <input type="text" placeholder="Nombre de usuario" id="firstName" name="firstName" value="<%= user.firstName %>">
+                                <input type="text" placeholder="Nombre" id="firstName" name="firstName" value="<%= user.firstName %>">
                             </div>
 
                             <div class="body__form__inputs__userData--input">
                                 <label for="lastName">Apellido:</label>
-                                <input type="text" placeholder="Nombre de usuario" id="lastName" name="lastName" value="<%= user.lastName %>">
+                                <input type="text" placeholder="Apellido" id="lastName" name="lastName" value="<%= user.lastName %>">
                             </div>
 
                             <div class="body__form__inputs__userData--input">
                                 <label for="bday">Cumpleaños:</label>
-                                <input type="date" placeholder="Nombre de usuario" id="bday" name="bday" value="<%= user.bday %>">
+                                <input type="date" id="bday" name="bday" value="<%= user.bday %>">
+                            </div>
+
+                            <div class="body__form__inputs__userData--input">
+                                <select name="city" id="city">
+                                    <option value="buenos aires">Buenos Aires</option>
+                                    <option value="cordoba">Córdoba</option>
+                                    <option value="chaco">Chaco</option>
+                                    <option value="formosa">Formosa</option>
+                                    <option value="neuquen">Neuquén</option>
+                                </select>
                             </div>
 
                             <div class="body__form__inputs__userData__input--avatar">
                                 <button class="body__form__inputs__userData__input__avatar--btn">Elegir Avatar</button>
                                 <input type="file" id="avatar" name="avatar">
                             </div>
+
                         </div>
                         <div class="body__form__button--btn">
                             <button type="submit">GUARDAR CAMBIOS</button>
