--- a/estructura de archivos/public/css/log-reg-profile.css
+++ b/estructura de archivos/public/css/log-reg-profile.css
@@ -141,8 +141,24 @@
 
 /** BODY | INPUTS | SELECT */
 
-.body__form__inputs__userData--input select {
-    width: 250px;
+.body__form__inputs__userData__input--select select {
+    width: 225px;
+    height: 50px;
+    color: var(--C_Ice-Cream);
+    background-color: transparent;
+    outline: none;
+    border: none;
+    border-bottom: 2px solid;
+    border-image: linear-gradient(to right, var(--C_Lightblue_Logo), var(--C_Pink_Logo)) 1;
+    padding-left: 5px;
+    padding-top: 15px;
+    transition: 1s all;
+    appearance: none;
+}
+
+.body__form__inputs__userData__input--select select:focus {
+    color: black;
+    background-color: transparent;
 }
 
 /** BODY | INPUTS | AVATAR */
