normalize added - textarea for userprofile added

--- a/estructura de archivos/src/views/users/profile.ejs
+++ b/estructura de archivos/src/views/users/profile.ejs
@@ -50,6 +50,11 @@
                                 </select>
                             </div>
 
+                            <div class="body__form__inputs__userData__input--textArea">
+                                <label for="aboutMe">Acerca de mí...</label>
+                                <textarea placeholder="Acerca de mí..." name="aboutMe" id="aboutMe"><%= user.aboutMe %></textarea>
+                            </div>
+
                         </div>
                         <div class="body__form__button--btn">
                             <button type="submit">GUARDAR CAMBIOS</button>
@@ -67,5 +72,5 @@
 
 </html>
 
-<!-- scripts user profile iamge -->
+<!-- scripts user profile image -->
 <script src="/javascripts/profileImage.js"></script>
