--- a/estructura de archivos/public/css/log-reg-profile.css
+++ b/estructura de archivos/public/css/log-reg-profile.css
@@ -6,6 +6,23 @@
     text-decoration: none;
 }
 
+::-webkit-scrollbar {
+    width: 8px;
+    background: var(--C_Light_Dark);
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--C_Lightblue_Logo);
+}
+
+/* input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus {
+    -webkit-text-fill-color: var(--C_Ice-Cream);
+    box-shadow: 0 0 0px 1000px black inset;
+    transition: background-color 5000s ease-in-out 0s;
+} */
+
 #b0dy__c0nt41n3r {
     width: 100%;
     height: 100vh;
@@ -196,13 +213,44 @@
     background: var(--C_Dark);
 }
 
-::-webkit-scrollbar {
-    width: 8px;
-    background: var(--C_Light_Dark);
+/** BODY | INPUTS | TEXTAREA */
+
+.body__form__inputs__userData__input--textArea {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-::-webkit-scrollbar-thumb {
-    background: var(--C_Lightblue_Logo);
+.body__form__inputs__userData__input--textArea textarea {
+    resize: none;
+    width: 250px;
+    height: 100px;
+    margin-top: 25px;
+    color: var(--C_Ice-Cream);
+    background-color: transparent;
+    outline: none;
+    border: 2px solid;
+    border-image: linear-gradient(to right, var(--C_Lightblue_Logo), var(--C_Pink_Logo)) 1;
+    padding: 5px 0 0 5px;
+    transition: 1s all;
+}
+
+.body__form__inputs__userData__input--textArea textarea::placeholder {
+    color: var(--C_Ice-Cream);
+    transition: 1s all;
+}
+
+.body__form__inputs__userData__input--textArea textarea:hover {
+    border-image: linear-gradient(to left, var(--C_Lightblue_Logo), var(--C_Pink_Logo)) 1;
+}
+
+.body__form__inputs__userData__input--textArea textarea:hover::placeholder {
+    color: var(--C_Pink_Logo);
+}
+
+.body__form__inputs__userData__input--textArea textarea:focus::placeholder {
+    color: var(--C_Pink_Logo);
 }
 
 /** BODY | INPUTS | BUTTON */
