--- a/estructura de archivos/public/css/styles.css
+++ b/estructura de archivos/public/css/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import'/css/normalize.css';
 @import'/css/general.css';
 @import'/css/index.css';
 @import'/css/productDetail.css';
