correcciones en footer y carrito

--- a/estructura de archivos/src/views/partials/footer.ejs
+++ b/estructura de archivos/src/views/partials/footer.ejs
@@ -69,7 +69,7 @@
     </section>
 
     <section class="footer__lastsection">
-        <p>Visita nuestras redes sociales</p>
+        <p class="footer_social_networks-title">Visita nuestras redes sociales</p>
         <nav class="footer__lastsection__navbar">
             <a href="">
                 <figure><i class="fa-brands fa-facebook-f"></i></figure>
