--- a/estructura de archivos/src/views/products/cart.ejs
+++ b/estructura de archivos/src/views/products/cart.ejs
@@ -11,7 +11,7 @@
             </div>
             <div class="articulos">
                 <article>
-                    <img src="/images/xbox-key.jpeg" alt="auriculares">
+                    <img src="/images/products/xbox-key.jpeg" alt="auriculares">
                     <div>
                         <h3>Mortal combat II</h3>
                         <p>
@@ -25,7 +25,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="/images/eldenring-card.webp" alt="silla">
+                    <img src="/images/products/eldenring-card.webp" alt="silla">
                     <div>
                         <h3>Elden ring</h3>
                         <p>Descripcion</p>
@@ -37,7 +37,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="/images/gtav-card.jpeg" alt="placagrafica">
+                    <img src="/images/products/gtav-card.jpeg" alt="placagrafica">
                     <div>
                         <h3>Grand theft auto V</h3>
                         <p>Descripcion</p>
