--- a/estructura de archivos/public/css/footer.css
+++ b/estructura de archivos/public/css/footer.css
@@ -68,6 +68,13 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+.payment-method-title, 
+.footer_social_networks-title{
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+    padding: 5px;
+}
 .method-payment-logo {
     width:50px;
     height:35px;
